--- a/style.css
+++ b/style.css
@@ -1,30 +1,64 @@
 body {
-    text-align: center;
+    background-image: url("https://www.psu.com/wp/wp-content/uploads/2019/05/MetalGearSolidRemakeDreams.jpg");
 }
 
-.card {
-    margin: 0 auto;
-    float: none;
-    top: 20px;
-}
-.btn {
+/* move to right to account for image above. TODO: Might need to chage "high score" display */
+.container {
+	width: 65%;
+	position: fixed;
+	left: 28%;
     padding: 20px;
-    margin: 20px;
+    color: white;
+    text-align: center;
+    font-size: x-large;
 }
 
-.btn-secondary {
-    background-color: lightslategray;
+
+.title {
+	padding-top:20px;
+	text-align: center;
+	font-size: 36px;
+	text-transform: uppercase;
+    color: whitesmoke;
 }
 
 #startBtn {
-    background-color: green;
-}
-
-.btn:hover {
-    background-color: white;
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    background-color: rgb(70, 121, 155);
+    height: 50px;
+    width: 90px;
 }
 
 #startBtn:hover {
-    background-color: white;
-    color: black;
+    background-color: gray;
+}
+
+#timer {
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    color: white;
+    font-size: x-large;
+}
+
+.question {
+	padding: 20px;
+	font-size: 22px;
+	background: rgb(70, 121, 155);
+	border-radius: 20px;
+	margin: 10px 0 10px 0;
+	color: #f6f6f6;
+}
+
+.option {
+	width: 387px;
+	display: inline-block;
+	padding: 10px 0 10px 15px;
+	vertical-align: middle;
+	background: white;
+	margin: 10px 0 10px 10px;
+	color: black;
+    border-radius: 20px
 }
